prerequisites/sfpowerscripts-artifact/force-app/main/default/objects/SfpowerscriptsArtifact__c/SfpowerscriptsArtifact__c.object-meta.xml
<CustomObject>
    <label>Sfpowerscripts Artifact</label>
    <nameField>
        <label>Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sfpowerscripts Artifacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>