prerequisites/sfpowerscripts-artifact/force-app/main/default/objects/SfpowerscriptsArtifact__c/fields/CommitId__c.field-meta.xml
<CustomField>
    <fullName>CommitId__c</fullName>
    <label>Commit Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>